--- a/css/style.css
+++ b/css/style.css
@@ -47,8 +47,8 @@
 
 /* About Section */
 #about {
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 #about div {
     flex-wrap: wrap;
@@ -59,8 +59,12 @@
     max-width: 400px;
     height: auto;
 }
+#about img {
+    
+}
 #about p {
     text-align: center;
-    margin: 20px;
-    font-size: 25px;
+    margin: none;
+
+    font-size: 20px;
 }
