--- a/css/style.css
+++ b/css/style.css
@@ -60,11 +60,51 @@
     height: auto;
 }
 #about img {
-    
+    margin-bottom: 20px;
 }
 #about p {
     text-align: center;
-    margin: none;
-
+    margin-bottom: 20px;
     font-size: 20px;
+}
+
+
+
+/* FOOTER */
+/* Idea for social links taken from adam-bushman.com */
+/* Code for social links taken from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_social_media_buttons */
+/* Code changed and adapted for use by Benjamin Bushman */
+footer {
+    display: block;
+    text-align: center;
+}
+.socialmedia {
+    width: 100%;
+}
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 20px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+}
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  color: black;
+}
+.fa-youtube {
+    color: black;
+}
+.fa-instagram {
+    color: black;
+}
+.fa-spotify {
+    color: black;
+}
+.designed {
+    font-size: 10px;
 }
