--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,8 +32,8 @@ body {
     width: 100%;
     text-align: center;
     list-style: none;
-    margin-left: -40px;
     margin-bottom: 20px;
+    padding-inline-start: 0px;
 }
 .navbar ul li {
     font-size: 25px;
